<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.svilupposw.barcototurin.InserLocalActivity"
    android:background="#b4c3e9">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="8dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="8dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="8dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="8dp"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="30dp"
        android:background="#fabf0f"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
